--- a/l10n_ru/i18n/l10n_ru.pot
+++ b/l10n_ru/i18n/l10n_ru.pot
@@ -3,7 +3,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 14.0\n"
+"Project-Id-Version: Odoo Server 17.0\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
@@ -12,3 +12,12 @@ msgstr ""
 "Content-Transfer-Encoding: \n"
 "Plural-Forms: \n"
 
+#. module: l10n_ru
+#: model:ir.model,name:l10n_ru.model_account_chart_template
+msgid "Account Chart Template"
+msgstr ""
+
+#. module: l10n_ru
+#: model:account.account.tag,name:l10n_ru.acc_tag_vat
+msgid "VAT"
+msgstr ""
